--- a/umakuderukana.html
+++ b/umakuderukana.html
@@ -88,6 +88,8 @@
         let timer;
         let count1;
         let count2;
+        let count3;
+        let count4;
         let repeat;
         function start() {
             const formGroup = document.querySelector('.form-group');
@@ -99,19 +101,24 @@
             const seconds2 = parseInt(document.getElementById("seconds2").value);
             repeat = parseInt(document.getElementById("times").value);
             count1 = seconds1;
+            count3 = seconds1;
+            count4 = seconds1;
             count2 = seconds2;
+            
             display.innerHTML = count1;
             timer = setInterval(() => {
                 if (count1 > 0) {
                     count1--;
+                    count3--;
+                    count4--;
                     display.innerHTML = count1;
                     if (count1 === 30) {
                         sanjyuu.play();
                     }
-                    else if (count1 === 20) {
+                    if (count3 === 20) {
                         nijyuu.play();
                     }
-                    else if (count1 === 10) {
+                    if (count4 === 10) {
                         jyuu.play();
                     }
                     else if (count1 === 0) {
